syntax = "proto2";
package user;

import "api.proto";
import "common.proto";
option go_package = "user";

message douyin_user_request {
  required int64 user_id = 1; // 用户id
  required string token = 2; // 用户鉴权token
}

message douyin_user_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required common.User user = 3; // 用户信息
}

message douyin_user_register_request {
  required string username = 1; // 注册用户名，最长32个字符
  required string password = 2; // 密码，最长32个字符
}

message douyin_user_register_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required int64 user_id = 3; // 用户id
  required string token = 4; // 用户鉴权token
}

message douyin_user_login_request {
  required string username = 1; // 登录用户名
  required string password = 2; // 登录密码
}

message douyin_user_login_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required int64 user_id = 3; // 用户id
  required string token = 4; // 用户鉴权token
}


service DouyinUserService {
  rpc GetUser(douyin_user_request) returns (douyin_user_response) {
    option (api.get) = "/douyin/user/";
  }
  rpc Login(douyin_user_login_request) returns (douyin_user_login_response) {
    option (api.post) = "/douyin/user/login/";
  }
  rpc Register(douyin_user_register_request) returns (douyin_user_register_response) {
    option (api.post) = "/douyin/user/register/";
  }
}